--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,11 @@
             <artifactId>junit</artifactId>
             <version>4.11</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>8.0.5</version>
+        </dependency>
     </dependencies>
 
     <build>
